2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Document.cs: fixed 'Bug 429738 - Middle-click paste
	  past end of row pastes in next line'.

2008-09-25  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs, Mono.TextEditor.Tests,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.mdp,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/DocumentTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/LineSplitterTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/UndoRedoTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/SearchTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests/SelectionTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertTabTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/SelectionSelectAllTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/RemoveTabTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/CaretMoveTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertNewLineTests.cs:
	  Moved text editor unit tests.

2008-09-22  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: Handled tooltip provider exception, to
	  prevent a text editor crash.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor.mdp: Updated projects.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/CodeSegmentPreviewWindow.cs: Fix crash caused by the
	  double buffer flag. Dispose resources on destroy.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/generated.cs, gtk-gui/objects.xml: Updated generated code.

2008-09-08  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed "Bug 423278 - wrong view when
	  jumping in editor without scrollbar".

2008-08-21  Mike Krüger <mkrueger@novell.com> 
