@@ -152,46 +152,46 @@ namespace Mono.TextEditor
 			repaint = true;
 //				this.QueueDraw ();
 //				return;
-					if (buffer == null) 
-						AllocateWindowBuffer (this.Allocation);
-					if (this.textEditorData.VAdjustment.Value != System.Math.Ceiling (this.textEditorData.VAdjustment.Value)) {
-						this.textEditorData.VAdjustment.Value = System.Math.Ceiling (this.textEditorData.VAdjustment.Value);
-						return;
-					}
-					int delta = (int)(this.textEditorData.VAdjustment.Value - this.oldVadjustment);
-					oldVadjustment = this.textEditorData.VAdjustment.Value;
-					if (System.Math.Abs (delta) >= Allocation.Height - this.LineHeight * 2 || this.TextViewMargin.inSelectionDrag) {
-						this.QueueDraw ();
-						return;
-					}
-					int from, to;
-					if (delta > 0) {
-						from = delta;
-						to   = 0;
-					} else {
-						from = 0;
-						to   = -delta;
-					}
-					
-					DoFlipBuffer ();
-					Caret.IsVisible = false;
-					this.buffer.DrawDrawable (Style.BackgroundGC (StateType.Normal), 
-					                          this.flipBuffer,
-					                          0, from, 
-					                          0, to, 
-					                          Allocation.Width, Allocation.Height - from - to);
-					if (delta > 0) {
-						RenderMargins (buffer, new Gdk.Rectangle (0, Allocation.Height - delta, Allocation.Width, delta));
-					} else {
-						RenderMargins (buffer, new Gdk.Rectangle (0, 0, Allocation.Width, -delta));
-					}
-					Caret.IsVisible = true;
-					
-					GdkWindow.DrawDrawable (Style.BackgroundGC (StateType.Normal),
-					                        buffer,
-					                        0, 0, 
-					                        0, 0, 
-					                        Allocation.Width, Allocation.Height);
+			if (buffer == null) 
+				AllocateWindowBuffer (this.Allocation);
+			if (this.textEditorData.VAdjustment.Value != System.Math.Ceiling (this.textEditorData.VAdjustment.Value)) {
+				this.textEditorData.VAdjustment.Value = System.Math.Ceiling (this.textEditorData.VAdjustment.Value);
+				return;
+			}
+			int delta = (int)(this.textEditorData.VAdjustment.Value - this.oldVadjustment);
+			oldVadjustment = this.textEditorData.VAdjustment.Value;
+			if (System.Math.Abs (delta) >= Allocation.Height - this.LineHeight * 2 || this.TextViewMargin.inSelectionDrag) {
+				this.QueueDraw ();
+				return;
+			}
+			int from, to;
+			if (delta > 0) {
+				from = delta;
+				to   = 0;
+			} else {
+				from = 0;
+				to   = -delta;
+			}
+			
+			DoFlipBuffer ();
+			Caret.IsVisible = false;
+			this.buffer.DrawDrawable (Style.BackgroundGC (StateType.Normal), 
+			                          this.flipBuffer,
+			                          0, from, 
+			                          0, to, 
+			                          Allocation.Width, Allocation.Height - from - to);
+			if (delta > 0) {
+				RenderMargins (buffer, new Gdk.Rectangle (0, Allocation.Height - delta, Allocation.Width, delta));
+			} else {
+				RenderMargins (buffer, new Gdk.Rectangle (0, 0, Allocation.Width, -delta));
+			}
+			Caret.IsVisible = true;
+			
+			GdkWindow.DrawDrawable (Style.BackgroundGC (StateType.Normal),
+			                        buffer,
+			                        0, 0, 
+			                        0, 0, 
+			                        Allocation.Width, Allocation.Height);
 		}
 		
 		protected override void OnSetScrollAdjustments (Adjustment hAdjustement, Adjustment vAdjustement)
@@ -1167,7 +1167,8 @@ namespace Mono.TextEditor
 				e.Window.DrawDrawable (Style.BackgroundGC (StateType.Normal), 
 				                       buffer,
 				                       e.Area.X, e.Area.Y, e.Area.X, e.Area.Y,
-				                       e.Area.Width, e.Area.Height);
+				                       e.Area.Width, e.Area.Height + 1);
+				textViewMargin.DrawCaret (e.Window);
 			}
 			return true;
 		}
