@@ -1,5 +1,11 @@
 2008-09-25  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/TextEditor.cs, Mono.TextEditor/TextViewMargin.cs:
+	  fixed 'Bug 424443 - Many cursors shown when pressing the Down key
+	  for a while'.
+
+2008-09-25  Mike Krüger <mkrueger@novell.com> 
+
 	* Mono.TextEditor/Document.cs: fixed 'Bug 429738 - Middle-click paste
 	  past end of row pastes in next line'.
 
